@@ -4,7 +4,8 @@ Changelog
 1.9.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Read global backy.conf parameters from `/etc/backy.global.conf`. Fall back to
+  built-in defaults if this file does not exist.
 
 
 1.9.5 (2016-10-21)
